--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <bootstrap.version>4.3.1</bootstrap.version>
         <lombok.version>1.18.6</lombok.version>
         <h2.version>1.4.197</h2.version>
+        <jaxb.version>2.3.0</jaxb.version>
     </properties>
 
     <parent>
@@ -23,6 +24,8 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.3.RELEASE</version>
     </parent>
+
+
 
     <dependencies>
 
@@ -46,6 +49,10 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
 
         <dependency>
@@ -75,6 +82,22 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${jaxb.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>${jaxb.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>${jaxb.version}</version>
         </dependency>
 
     </dependencies>
